# qute-cookie-block

./: .gitignore  Cargo.toml  README.md  make.sh
.github/ISSUE_TEMPLATE/: request-websites.md
cookie-blockers/: aol.com.xml  consent.youtube.com.xml  ebay.com.xml  espn.com.xml  etsy.com.xml  facebook.com.xml  foxnews.com.xml  geeksforgeeks.org.xml  genius.com.xml  google.com.xml  healthline.com.xml  instagram.com.xml  investopedia.com.xml  linkedin.com.xml  medicalnews.com.xml  medicalnewstoday.com.xml  microsoft.com.xml  msn.com.xml  netflix.com.xml  nytimes.com.xml  paypal.com.xml  reddit.com.xml  roblox.com.xml  spotify.com.xml  stackoverflow.com.xml  steampowered.com.xml  twitter.com.xml  webmd.com.xml  wolframalpha.com.xml  yahoo.com.xml
src/: blocker.rs  blocklist_blocker.rs  commands.rs  file_blocker.rs  main.rs
src/blockers/: cookienotice.rs  fandom.rs  fc.rs  humanity.rs  mod.rs  onetrust.rs  reddit.rs  truste.rs
