[package]
name = "qute-cookie-block"
version = "0.2.0"
authors = ["Julian Schmidhuber <schmidhuberj2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "^0.12.0"
url = "^2.2.0"
quick-xml = "^0.22.0"
